--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,8 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=10000
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 # spring.application.name=barataria
 
 # spring.datasource.url=jdbc:mysql://localhost:3306/GRUPO_BARATARIA_DB?useSSL=false&serverTimezone=UTC
